[project]
name = "data-layer"
version = "0.1.0"
description = "Contains Files for Data Layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "fastmcp>=2.13.3",
    "lightgbm",
    "matplotlib",
    "mcp>=1.22.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]
